# PythonPlusPlus

./: .gitignore  README.md  conftest.py  housekeeping.bash  pyproject.toml
src/: compiler.py
src/code_generator/: code_generator.py
src/lexer/: lexer.py  lexer_constants.py  token.py
src/parser/: ast_nodes.py  parser.py  parser_constants.py
src/type_checker/: typechecker.py
test_files/: fizzbuzz.js  fizzbuzz.pp  test.js  test.pp
tests/: test_code_generator.py  test_lexer.py  test_parser.py  test_type_checker.py
tests/helpers/: nodes_equal.py
