[project]
name = "pythonplusplus"
version = "0.1.0"
description = ""
authors = [
    {name = "ChrisK15",email = "chris.kelamyan.115@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "jsbeautifier (>=1.15.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Custom CLI Commands
[tool.poetry.scripts]
ppp = "src.compiler:main"
